# mcp-as-a-judge

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  RATE_LIMIT_HANDLING.md  README.md  cf-requirements.txt  config.json  docker-compose.yml  example_usage.py  judge_mcp_flow.md  mcp_config_example.json  package.json  pyproject.toml  requirements.txt  test_db_implementation.py  test_dynamic_urls.py  test_real_scenario.py  worker.py  wrangler.jsonc
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish-mcp.yml  release.yml  semantic-release.yml  validate-conventions.yml
cloudflare-worker/: .gitignore  pyproject.toml  wrangler.jsonc
cloudflare-worker/mcp_as_a_judge/: __init__.py  prompt_loader.py  server.py
docs/: workflow_v2.md
examples/: rate_limit_demo.py
mcp_as_a_judge/: __main__.py  models.py
scripts/: bump_version.py  setup-secrets.md  test_dynamic_urls.py
tests/: conftest.py  test_conversation_history_lifecycle.py  test_conversation_history_service_integration.py  test_db_implementation.py  test_design_research_validation.py  test_enhanced_features.py  test_improved_token_counting.py  test_json_extraction.py  test_llm_fallback.py  test_llm_integration.py  test_messaging_layer.py  test_models.py  test_prompt_loader.py  test_server.py  test_server_startup.py  test_sqlite_comprehensive.py  test_task_sizing.py  test_token_based_history.py  test_tool_description_factory.py  test_tool_description_integration.py  test_tool_description_local_storage_provider.py
(+104 files in other folders)
