[project]
name = "mcp-as-a-judge-worker"
version = "0.1.0"
description = "MCP as a Judge deployed on Cloudflare Workers"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.0,<1.13.0",
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-core==2.27.2",
    "jinja2>=3.1.0"
]

[dependency-groups]
dev = ["workers-py"]
